--- a/Jha.MP4/Jha.MP4.csproj
+++ b/Jha.MP4/Jha.MP4.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <LangVersion>8.0</LangVersion>
+    <TargetFrameworks>net8.0;net10.0</TargetFrameworks>
     <Nullable>enable</Nullable>
-    <PackageId>JHa.mp4lib</PackageId>
-    <Version>0.2.0</Version>
+		<LangVersion>14.0</LangVersion>
+    <PackageId>Jha.MP4</PackageId>
+    <Version>1.0.0-alpha.1</Version>
     <Authors>JHa</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>mp4</PackageTags>
@@ -13,12 +13,9 @@
     <PackageProjectUrl>https://github.com/lojzik/mp4lib</PackageProjectUrl>
     <RepositoryUrl>https://github.com/lojzik/mp4lib</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>    
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
-  </ItemGroup>
   <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
   </ItemGroup>
