--- a/mp4cmd/mp4cmd.csproj
+++ b/mp4cmd/mp4cmd.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <LangVersion>8.0</LangVersion>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+		<TargetFrameworks>net8.0;net10.0</TargetFrameworks>
+		<LangVersion>14.0</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\mp4lib\mp4lib.csproj" />
+    <ProjectReference Include="..\Jha.MP4\Jha.MP4.csproj" />
   </ItemGroup>
   <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
