--- a/Jha.MP4/Jha.MP4.csproj
+++ b/Jha.MP4/Jha.MP4.csproj
@@ -17,6 +17,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jha.Common" Version="1.0.0-alpha.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
   </ItemGroup>
 </Project>
