new boxes: mfhd, moof, tfhd, trun. parser changes

--- a/Jha.MP4/Jha.MP4.csproj
+++ b/Jha.MP4/Jha.MP4.csproj
@@ -13,11 +13,11 @@
     <PackageProjectUrl>https://github.com/lojzik/mp4lib</PackageProjectUrl>
     <RepositoryUrl>https://github.com/lojzik/mp4lib</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+<!--    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>-->
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jha.Common" Version="1.0.0-alpha.1" />
+    <PackageReference Include="Jha.Common" Version="1.0.0-alpha.3" />
   </ItemGroup>
 
   <ItemGroup>
