--- a/JHa.MP4/Jha.MP4.csproj
+++ b/JHa.MP4/Jha.MP4.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
 		<LangVersion>14.0</LangVersion>
     <PackageId>Jha.MP4</PackageId>
-    <Version>1.0.0-alpha.2</Version>
+    <Version>1.0.0-alpha.3</Version>
     <Authors>JHa</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>mp4</PackageTags>
@@ -21,8 +21,8 @@
 	</PropertyGroup>	
 
   <ItemGroup>
-    <PackageReference Include="Jha.Common" Version="1.0.0-alpha.8" />
-  </ItemGroup>
+		<PackageReference Include="Lojzik.JHa.Common" Version="1.0.0-alpha.10" />
+	</ItemGroup>
 
   <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
