--- a/JHa.MP4/Jha.MP4.csproj
+++ b/JHa.MP4/Jha.MP4.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net8.0;net10.0</TargetFrameworks>
     <Nullable>enable</Nullable>
 		<LangVersion>14.0</LangVersion>
-    <PackageId>Jha.MP4</PackageId>
+    <PackageId>Lojzik.JHa.MP4</PackageId>
     <Version>1.0.0-alpha.3</Version>
     <Authors>JHa</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
