--- a/JHa.MP4.Test/JHa.MP4.Test.csproj
+++ b/JHa.MP4.Test/JHa.MP4.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-		<TargetFrameworks>net10.0</TargetFrameworks>
+		<TargetFrameworks>net10.0;net4.8.1</TargetFrameworks>
 		<LangVersion>14.0</LangVersion>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
