--- a/JHa.MP4/Jha.MP4.csproj
+++ b/JHa.MP4/Jha.MP4.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net10.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net10.0;netstandard2.0</TargetFrameworks>
     <Nullable>enable</Nullable>
 		<LangVersion>14.0</LangVersion>
     <PackageId>Lojzik.JHa.MP4</PackageId>
-    <Version>1.0.0-alpha.3</Version>
+    <Version>1.0.0-alpha.4</Version>
     <Authors>JHa</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>mp4</PackageTags>
@@ -21,7 +21,7 @@
 	</PropertyGroup>	
 
   <ItemGroup>
-		<PackageReference Include="Lojzik.JHa.Common" Version="1.0.0-alpha.10" />
+		<PackageReference Include="Lojzik.JHa.Common" Version="1.0.0-alpha.13" />
 	</ItemGroup>
 
   <ItemGroup>
